NextRelevanceToken.cpp
/* Generated by re2c 0.13.5 on Sat Jun 20 01:47:06 2009 */

// To generate this file run: re2c -b -i -w NextRelevanceToken.re2c > NextRelevanceToken.cpp

#include "NextRelevanceToken.h"

#define RET( c, l ) \
	token->colorType = c; \
	return
	
namespace C = ColorType;

void NextRelevanceToken( RelevanceToken* token, LexerState* scanner, const UTF16::Unit* cursor )
{
	scanner->marker    = cursor;
	scanner->ctxmarker = cursor;


{
	UTF16::Unit yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[] = {
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 160, 160, 128, 128, 160, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		160, 128,   0, 128, 128, 128, 128, 144, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		192, 192, 192, 192, 192, 192, 192, 192, 
		192, 192, 128, 128, 128, 128, 128, 128, 
		128, 144, 144, 144, 144, 144, 144, 144, 
		144, 144, 144, 144, 144, 144, 144, 144, 
		144, 144, 144, 144, 144, 144, 144, 144, 
		144, 144, 144, 128, 128, 128, 128, 144, 
		128, 144, 144, 144, 144, 144, 144, 144, 
		144, 144, 144, 144, 144, 144, 144, 144, 
		144, 144, 144, 144, 144, 144, 144, 144, 
		144, 144, 144, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
	};

	if ((scanner->end - cursor) < 17) { cursor = scanner->Fill( cursor ); }
	yych = *cursor;
	if (yych <= 'H') {
		if (yych <= ',') {
			if (yych <= '"') {
				if (yych <= '\r') {
					if (yych <= 0x0008) goto yy3;
					if (yych <= '\n') goto yy5;
					if (yych <= '\f') goto yy3;
					goto yy5;
				} else {
					if (yych <= 0x001F) goto yy3;
					if (yych <= ' ') goto yy5;
					if (yych <= '!') goto yy6;
					goto yy7;
				}
			} else {
				if (yych <= '(') {
					if (yych <= '%') goto yy3;
					if (yych <= '&') goto yy8;
					if (yych <= '\'') goto yy9;
					goto yy10;
				} else {
					if (yych <= ')') goto yy11;
					if (yych <= '*') goto yy12;
					if (yych <= '+') goto yy13;
					goto yy14;
				}
			}
		} else {
			if (yych <= '=') {
				if (yych <= '9') {
					if (yych <= '-') goto yy15;
					if (yych <= '.') goto yy3;
					if (yych <= '/') goto yy16;
					goto yy17;
				} else {
					if (yych <= ':') goto yy3;
					if (yych <= ';') goto yy18;
					if (yych <= '<') goto yy19;
					goto yy20;
				}
			} else {
				if (yych <= 'B') {
					if (yych <= '>') goto yy21;
					if (yych <= '@') goto yy3;
					if (yych <= 'A') goto yy22;
					goto yy9;
				} else {
					if (yych <= 'D') {
						if (yych <= 'C') goto yy23;
						goto yy24;
					} else {
						if (yych <= 'E') goto yy25;
						if (yych <= 'F') goto yy26;
						goto yy9;
					}
				}
			}
		}
	} else {
		if (yych <= 'c') {
			if (yych <= 'T') {
				if (yych <= 'N') {
					if (yych <= 'I') goto yy27;
					if (yych <= 'L') goto yy9;
					if (yych <= 'M') goto yy28;
					goto yy29;
				} else {
					if (yych <= 'O') goto yy30;
					if (yych <= 'R') goto yy9;
					if (yych <= 'S') goto yy31;
					goto yy32;
				}
			} else {
				if (yych <= '^') {
					if (yych == 'W') goto yy33;
					if (yych <= 'Z') goto yy9;
					goto yy3;
				} else {
					if (yych <= '`') {
						if (yych <= '_') goto yy9;
						goto yy3;
					} else {
						if (yych <= 'a') goto yy22;
						if (yych <= 'b') goto yy9;
						goto yy23;
					}
				}
			}
		} else {
			if (yych <= 'n') {
				if (yych <= 'h') {
					if (yych <= 'd') goto yy24;
					if (yych <= 'e') goto yy25;
					if (yych <= 'f') goto yy26;
					goto yy9;
				} else {
					if (yych <= 'i') goto yy27;
					if (yych <= 'l') goto yy9;
					if (yych <= 'm') goto yy28;
					goto yy29;
				}
			} else {
				if (yych <= 't') {
					if (yych <= 'o') goto yy30;
					if (yych <= 'r') goto yy9;
					if (yych <= 's') goto yy31;
					goto yy32;
				} else {
					if (yych <= 'w') {
						if (yych <= 'v') goto yy9;
						goto yy33;
					} else {
						if (yych <= 'z') goto yy9;
						if (yych <= 0x00FF) goto yy3;
					}
				}
			}
		}
	}
yy2:
	cursor = scanner->marker;
	if (yyaccept <= 5) {
		if (yyaccept <= 2) {
			if (yyaccept <= 1) {
				if (yyaccept <= 0) {
					goto yy4;
				} else {
					goto yy35;
				}
			} else {
				goto yy65;
			}
		} else {
			if (yyaccept <= 4) {
				if (yyaccept <= 3) {
					goto yy80;
				} else {
					goto yy220;
				}
			} else {
				goto yy281;
			}
		}
	} else {
		if (yyaccept <= 8) {
			if (yyaccept <= 7) {
				if (yyaccept <= 6) {
					goto yy331;
				} else {
					goto yy372;
				}
			} else {
				goto yy432;
			}
		} else {
			if (yyaccept <= 10) {
				if (yyaccept <= 9) {
					goto yy482;
				} else {
					goto yy578;
				}
			} else {
				goto yy593;
			}
		}
	}
yy3:
	++cursor;
yy4:
	{ RET( C::illegal,   L::illegal    ); }
yy5:
	yych = *++cursor;
	if (yych <= '\f') {
		if (yych <= 0x0008) goto yy4;
		if (yych <= '\n') goto yy713;
		goto yy4;
	} else {
		if (yych <= '\r') goto yy713;
		if (yych == ' ') goto yy713;
		goto yy4;
	}
yy6:
	yych = *++cursor;
	if (yych == '=') goto yy711;
	goto yy4;
yy7:
	yyaccept = 0;
	yych = *(scanner->marker = ++cursor);
	goto yy708;
yy8:
	yych = *++cursor;
	goto yy4;
yy9:
	yych = *++cursor;
	if (yych & ~0xFF) {
		goto yy4;
	} else if (yybm[0+yych] & 16) {
		goto yy36;
	}
	goto yy4;
yy10:
	yych = *++cursor;
	goto yy4;
yy11:
	yych = *++cursor;
	goto yy4;
yy12:
	yych = *++cursor;
	goto yy4;
yy13:
	yych = *++cursor;
	goto yy4;
yy14:
	yych = *++cursor;
	goto yy4;
yy15:
	yych = *++cursor;
	goto yy4;
yy16:
	yych = *++cursor;
	goto yy4;
yy17:
	yych = *++cursor;
	if (yych & ~0xFF) {
		goto yy4;
	} else if (yybm[0+yych] & 64) {
		goto yy704;
	}
	goto yy4;
yy18:
	yych = *++cursor;
	goto yy4;
yy19:
	yych = *++cursor;
	if (yych == '=') goto yy702;
	goto yy4;
yy20:
	yych = *++cursor;
	goto yy4;
yy21:
	yych = *++cursor;
	if (yych == '=') goto yy700;
	goto yy4;
yy22:
	scanner->ctxmarker = cursor + 1;
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= 'M') {
			if (yych == '\'') goto yy36;
			if (yych <= '@') goto yy691;
			goto yy36;
		} else {
			if (yych <= 'N') goto yy690;
			if (yych == 'S') goto yy689;
			goto yy36;
		}
	} else {
		if (yych <= 'm') {
			if (yych == '_') goto yy36;
			if (yych <= '`') goto yy691;
			goto yy36;
		} else {
			if (yych <= 'r') {
				if (yych <= 'n') goto yy690;
				goto yy36;
			} else {
				if (yych <= 's') goto yy689;
				if (yych <= 'z') goto yy36;
				goto yy691;
			}
		}
	}
yy23:
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= '@') {
			if (yych == '\'') goto yy36;
			goto yy4;
		} else {
			if (yych == 'O') goto yy680;
			goto yy36;
		}
	} else {
		if (yych <= '`') {
			if (yych == '_') goto yy36;
			goto yy4;
		} else {
			if (yych == 'o') goto yy680;
			if (yych <= 'z') goto yy36;
			goto yy4;
		}
	}
yy24:
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= '@') {
			if (yych == '\'') goto yy36;
			goto yy4;
		} else {
			if (yych == 'O') goto yy607;
			goto yy36;
		}
	} else {
		if (yych <= '`') {
			if (yych == '_') goto yy36;
			goto yy4;
		} else {
			if (yych == 'o') goto yy607;
			if (yych <= 'z') goto yy36;
			goto yy4;
		}
	}
yy25:
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= 'M') {
			if (yych <= '@') {
				if (yych == '\'') goto yy36;
				goto yy4;
			} else {
				if (yych == 'L') goto yy546;
				goto yy36;
			}
		} else {
			if (yych <= 'Q') {
				if (yych <= 'N') goto yy545;
				if (yych <= 'P') goto yy36;
				goto yy544;
			} else {
				if (yych == 'X') goto yy543;
				goto yy36;
			}
		}
	} else {
		if (yych <= 'm') {
			if (yych <= '`') {
				if (yych == '_') goto yy36;
				goto yy4;
			} else {
				if (yych == 'l') goto yy546;
				goto yy36;
			}
		} else {
			if (yych <= 'q') {
				if (yych <= 'n') goto yy545;
				if (yych <= 'p') goto yy36;
				goto yy544;
			} else {
				if (yych == 'x') goto yy543;
				if (yych <= 'z') goto yy36;
				goto yy4;
			}
		}
	}
yy26:
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= '\'') {
			if (yych <= '&') goto yy4;
			goto yy36;
		} else {
			if (yych <= '@') goto yy4;
			if (yych <= 'A') goto yy537;
			goto yy36;
		}
	} else {
		if (yych <= '`') {
			if (yych == '_') goto yy36;
			goto yy4;
		} else {
			if (yych <= 'a') goto yy537;
			if (yych <= 'z') goto yy36;
			goto yy4;
		}
	}
yy27:
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= 'E') {
			if (yych == '\'') goto yy36;
			if (yych <= '@') goto yy4;
			goto yy36;
		} else {
			if (yych <= 'R') {
				if (yych <= 'F') goto yy216;
				goto yy36;
			} else {
				if (yych <= 'S') goto yy215;
				if (yych <= 'T') goto yy214;
				goto yy36;
			}
		}
	} else {
		if (yych <= 'f') {
			if (yych <= '_') {
				if (yych <= '^') goto yy4;
				goto yy36;
			} else {
				if (yych <= '`') goto yy4;
				if (yych <= 'e') goto yy36;
				goto yy216;
			}
		} else {
			if (yych <= 's') {
				if (yych <= 'r') goto yy36;
				goto yy215;
			} else {
				if (yych <= 't') goto yy214;
				if (yych <= 'z') goto yy36;
				goto yy4;
			}
		}
	}
yy28:
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= '@') {
			if (yych == '\'') goto yy36;
			goto yy4;
		} else {
			if (yych == 'O') goto yy210;
			goto yy36;
		}
	} else {
		if (yych <= '`') {
			if (yych == '_') goto yy36;
			goto yy4;
		} else {
			if (yych == 'o') goto yy210;
			if (yych <= 'z') goto yy36;
			goto yy4;
		}
	}
yy29:
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= 'I') {
			if (yych <= '\'') {
				if (yych <= '&') goto yy4;
				goto yy36;
			} else {
				if (yych <= '@') goto yy4;
				if (yych <= 'H') goto yy36;
				goto yy184;
			}
		} else {
			if (yych <= 'O') {
				if (yych <= 'N') goto yy36;
				goto yy183;
			} else {
				if (yych == 'U') goto yy182;
				goto yy36;
			}
		}
	} else {
		if (yych <= 'i') {
			if (yych <= '_') {
				if (yych <= '^') goto yy4;
				goto yy36;
			} else {
				if (yych <= '`') goto yy4;
				if (yych <= 'h') goto yy36;
				goto yy184;
			}
		} else {
			if (yych <= 't') {
				if (yych == 'o') goto yy183;
				goto yy36;
			} else {
				if (yych <= 'u') goto yy182;
				if (yych <= 'z') goto yy36;
				goto yy4;
			}
		}
	}
yy30:
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= 'E') {
			if (yych == '\'') goto yy36;
			if (yych <= '@') goto yy4;
			goto yy36;
		} else {
			if (yych <= 'F') goto yy177;
			if (yych == 'R') goto yy176;
			goto yy36;
		}
	} else {
		if (yych <= 'e') {
			if (yych == '_') goto yy36;
			if (yych <= '`') goto yy4;
			goto yy36;
		} else {
			if (yych <= 'q') {
				if (yych <= 'f') goto yy177;
				goto yy36;
			} else {
				if (yych <= 'r') goto yy176;
				if (yych <= 'z') goto yy36;
				goto yy4;
			}
		}
	}
yy31:
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= '@') {
			if (yych == '\'') goto yy36;
			goto yy4;
		} else {
			if (yych == 'T') goto yy157;
			goto yy36;
		}
	} else {
		if (yych <= '`') {
			if (yych == '_') goto yy36;
			goto yy4;
		} else {
			if (yych == 't') goto yy157;
			if (yych <= 'z') goto yy36;
			goto yy4;
		}
	}
yy32:
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= 'G') {
			if (yych == '\'') goto yy36;
			if (yych <= '@') goto yy4;
			goto yy36;
		} else {
			if (yych <= 'H') goto yy44;
			if (yych == 'R') goto yy43;
			goto yy36;
		}
	} else {
		if (yych <= 'g') {
			if (yych == '_') goto yy36;
			if (yych <= '`') goto yy4;
			goto yy36;
		} else {
			if (yych <= 'q') {
				if (yych <= 'h') goto yy44;
				goto yy36;
			} else {
				if (yych <= 'r') goto yy43;
				if (yych <= 'z') goto yy36;
				goto yy4;
			}
		}
	}
yy33:
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= '@') {
			if (yych == '\'') goto yy36;
			goto yy4;
		} else {
			if (yych != 'H') goto yy36;
		}
	} else {
		if (yych <= '`') {
			if (yych == '_') goto yy36;
			goto yy4;
		} else {
			if (yych == 'h') goto yy34;
			if (yych <= 'z') goto yy36;
			goto yy4;
		}
	}
yy34:
	++cursor;
	if ((yych = *cursor) == 'O') goto yy38;
	if (yych == 'o') goto yy38;
	goto yy37;
yy35:
	{ RET( C::automatic, L::word ); }
yy36:
	++cursor;
	if (scanner->end <= cursor) { cursor = scanner->Fill( cursor ); }
	yych = *cursor;
yy37:
	if (yych & ~0xFF) {
		goto yy35;
	} else if (yybm[0+yych] & 16) {
		goto yy36;
	}
	goto yy35;
yy38:
	yych = *++cursor;
	if (yych == 'S') goto yy39;
	if (yych != 's') goto yy37;
yy39:
	yych = *++cursor;
	if (yych == 'E') goto yy40;
	if (yych != 'e') goto yy37;
yy40:
	scanner->ctxmarker = cursor + 1;
	yych = *++cursor;
	if (yych & ~0xFF) {
	} else if (yybm[0+yych] & 16) {
		goto yy36;
	}
	++cursor;
	cursor = scanner->ctxmarker;
	{ RET( C::keyword, L::whose             ); }
yy43:
	yych = *++cursor;
	if (yych == 'U') goto yy153;
	if (yych == 'u') goto yy153;
	goto yy37;
yy44:
	yych = *++cursor;
	if (yych == 'E') goto yy45;
	if (yych != 'e') goto yy37;
yy45:
	scanner->ctxmarker = cursor + 1;
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych <= 'M') {
			if (yych == '\'') goto yy36;
			if (yych <= '@') goto yy48;
			goto yy36;
		} else {
			if (yych <= 'N') goto yy47;
			if (yych != 'R') goto yy36;
		}
	} else {
		if (yych <= 'm') {
			if (yych == '_') goto yy36;
			if (yych <= '`') goto yy48;
			goto yy36;
		} else {
			if (yych <= 'q') {
				if (yych <= 'n') goto yy47;
				goto yy36;
			} else {
				if (yych <= 'r') goto yy46;
				if (yych <= 'z') goto yy36;
				goto yy48;
			}
		}
	}
yy46:
	yych = *++cursor;
	if (yych == 'E') goto yy52;
	if (yych == 'e') goto yy52;
	goto yy37;
yy47:
	scanner->ctxmarker = cursor + 1;
	yych = *++cursor;
	if (yych & ~0xFF) {
		goto yy50;
	} else if (yybm[0+yych] & 16) {
		goto yy36;
	}
	goto yy50;
yy48:
	++cursor;
	cursor = scanner->ctxmarker;
	{ RET( C::ignored, L::ignored           ); }
yy50:
	++cursor;
	cursor = scanner->ctxmarker;
	{ RET( C::keyword, L::then              ); }
yy52:
	yyaccept = 1;
	yych = *(scanner->marker = ++cursor);
	if (yych & ~0xFF) {
		goto yy35;
	} else if (yybm[0+yych] & 32) {
		goto yy53;
	}
	if (yych <= 'Z') {
		if (yych == '\'') goto yy36;
		if (yych <= '@') goto yy35;
		goto yy36;
	} else {
		if (yych <= '_') {
			if (yych <= '^') goto yy35;
			goto yy36;
		} else {
			if (yych <= '`') goto yy35;
			if (yych <= 'z') goto yy36;
			goto yy35;
		}
	}
yy53:
	++cursor;
	if ((scanner->end - cursor) < 10) { cursor = scanner->Fill( cursor ); }
	yych = *cursor;
	if (yych & ~0xFF) {
		goto yy2;
	} else if (yybm[0+yych] & 32) {
		goto yy53;
	}
	if (yych <= 'T') {
		if (yych <= 'C') {
			if (yych != 'A') goto yy2;
		} else {
			if (yych <= 'D') goto yy57;
			if (yych <= 'E') goto yy58;
			if (yych <= 'S') goto yy2;
			goto yy56;
		}
	} else {
		if (yych <= 'd') {
			if (yych == 'a') goto yy55;
			if (yych <= 'c') goto yy2;
			goto yy57;
		} else {
			if (yych <= 'e') goto yy58;
			if (yych == 't') goto yy56;
			goto yy2;
		}
	}
yy55:
	++cursor;
	if (scanner->end <= cursor) { cursor = scanner->Fill( cursor ); }
	yych = *cursor;
	if (yych <= 0x001F) {
		if (yych <= '\n') {
			if (yych <= 0x0008) goto yy2;
			goto yy151;
		} else {
			if (yych == '\r') goto yy151;
			goto yy2;
		}
	} else {
		if (yych <= 'N') {
			if (yych <= ' ') goto yy151;
			if (yych <= 'M') goto yy2;
			goto yy150;
		} else {
			if (yych == 'n') goto yy150;
			goto yy2;
		}
	}
yy56:
	++cursor;
	if (scanner->end <= cursor) { cursor = scanner->Fill( cursor ); }
	yych = *cursor;
	if (yych == 'H') goto yy149;
	if (yych == 'h') goto yy149;
	goto yy2;
yy57:
	yych = *++cursor;
	if (yych == 'O') goto yy94;
	if (yych == 'o') goto yy94;
	goto yy2;
yy58:
	yych = *++cursor;
	if (yych == 'X') goto yy59;
	if (yych != 'x') goto yy2;
yy59:
	yych = *++cursor;
	if (yych == 'I') goto yy60;
	if (yych != 'i') goto yy2;
yy60:
	yych = *++cursor;
	if (yych == 'S') goto yy61;
	if (yych != 's') goto yy2;
yy61:
	yych = *++cursor;
	if (yych == 'T') goto yy62;
	if (yych != 't') goto yy2;
yy62:
	scanner->ctxmarker = cursor + 1;
	yych = *++cursor;
	if (yych <= '@') {
		if (yych <= '\r') {
			if (yych <= 0x0008) goto yy66;
			if (yych <= '\n') goto yy64;
			if (yych <= '\f') goto yy66;
			goto yy64;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x001F) goto yy66;
				goto yy64;
			} else {
				if (yych == '\'') goto yy2;
				goto yy66;
			}
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'S') {
				if (yych <= 'R') goto yy2;
			} else {
				if (yych <= 'Z') goto yy2;
				if (yych <= '^') goto yy66;
				goto yy2;
			}
		} else {
			if (yych <= 'r') {
				if (yych <= '`') goto yy66;
				goto yy2;
			} else {
				if (yych <= 's') goto yy63;
				if (yych <= 'z') goto yy2;
				goto yy66;
			}
		}
	}
yy63:
	scanner->ctxmarker = cursor + 1;
	yych = *++cursor;
	if (yych <= '&') {
		if (yych <= '\f') {
			if (yych <= 0x0008) goto yy79;
			if (yych <= '\n') goto yy81;
			goto yy79;
		} else {
			if (yych <= '\r') goto yy81;
			if (yych == ' ') goto yy81;
			goto yy79;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '\'') goto yy2;
			if (yych <= '@') goto yy79;
			if (yych <= 'Z') goto yy2;
			goto yy79;
		} else {
			if (yych == '`') goto yy79;
			if (yych <= 'z') goto yy2;
			goto yy79;
		}
	}
yy64:
	yyaccept = 2;
	yych = *(scanner->marker = ++cursor);
	if (yych <= 'M') {
		if (yych <= '\r') {
			if (yych <= 0x0008) goto yy65;
			if (yych <= '\n') goto yy70;
			if (yych >= '\r') goto yy70;
		} else {
			if (yych <= ' ') {
				if (yych >= ' ') goto yy70;
			} else {
				if (yych == 'A') goto yy67;
			}
		}
	} else {
		if (yych <= 'a') {
			if (yych <= 'S') {
				if (yych <= 'N') goto yy69;
			} else {
				if (yych <= 'T') goto yy68;
				if (yych >= 'a') goto yy67;
			}
		} else {
			if (yych <= 'n') {
				if (yych >= 'n') goto yy69;
			} else {
				if (yych == 't') goto yy68;
			}
		}
	}
yy65:
	cursor = scanner->ctxmarker;
	{ RET( C::keyword, L::exists            ); }
yy66:
	yych = *++cursor;
	goto yy65;
yy67:
	++cursor;
	if (scanner->end <= cursor) { cursor = scanner->Fill( cursor ); }
	yych = *cursor;
	if (yych <= 0x001F) {
		if (yych <= '\n') {
			if (yych <= 0x0008) goto yy2;
			goto yy77;
		} else {
			if (yych == '\r') goto yy77;
			goto yy2;
		}
	} else {
		if (yych <= 'N') {
			if (yych <= ' ') goto yy77;
			if (yych <= 'M') goto yy2;
			goto yy76;
		} else {
			if (yych == 'n') goto yy76;
			goto yy2;
		}
	}
yy68:
	++cursor;
	if (scanner->end <= cursor) { cursor = scanner->Fill( cursor ); }
	yych = *cursor;
	if (yych == 'H') goto yy75;
	if (yych == 'h') goto yy75;
	goto yy2;
yy69:
	yych = *++cursor;
	if (yych == 'O') goto yy72;
	if (yych == 'o') goto yy72;
	goto yy2;
yy70:
	++cursor;
	if ((scanner->end - cursor) < 3) { cursor = scanner->Fill( cursor ); }
	yych = *cursor;
	if (yych <= 'M') {
		if (yych <= '\r') {
			if (yych <= 0x0008) goto yy2;
			if (yych <= '\n') goto yy70;
			if (yych <= '\f') goto yy2;
			goto yy70;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x001F) goto yy2;
				goto yy70;
			} else {
				if (yych == 'A') goto yy67;
				goto yy2;
			}
		}
	} else {
		if (yych <= 'a') {
			if (yych <= 'S') {
				if (yych <= 'N') goto yy69;
				goto yy2;
			} else {
				if (yych <= 'T') goto yy68;
				if (yych <= '`') goto yy2;
				goto yy67;
			}
		} else {
			if (yych <= 'n') {
				if (yych <= 'm') goto yy2;
				goto yy69;
			} else {
				if (yych == 't') goto yy68;
				goto yy2;
			}
		}
	}
yy72:
	scanner->ctxmarker = cursor + 1;
	yych = *++cursor;
	if (yych <= 'Z') {
		if (yych == '\'') goto yy2;
		if (yych >= 'A') goto yy2;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy2;
		} else {
			if (yych <= '`') goto yy73;
			if (yych <= 'z') goto yy2;
		}
	}
yy73:
	++cursor;
	cursor = scanner->ctxmarker;
	{ RET( C::keyword, L::notExists         ); }
yy75:
	++cursor;
	if (scanner->end <= cursor) { cursor = scanner->Fill( cursor ); }
	yych = *cursor;
	if (yych == 'E') goto yy76;
	if (yych != 'e') goto yy2;
yy76:
	++cursor;
	if (scanner->end <= cursor) { cursor = scanner->Fill( cursor ); }
	yych = *cursor;
	if (yych <= '\f') {
		if (yych <= 0x0008) goto yy2;
		if (yych >= '\v') goto yy2;
	} else {
		if (yych <= '\r') goto yy77;
		if (yych != ' ') goto yy2;
	}
yy77:
	++cursor;
	if ((scanner->end - cursor) < 3) { cursor = scanner->Fill( cursor ); }
	yych = *cursor;
	if (yych <= 'M') {
		if (yych <= '\r') {
